# VSTJS

./: README.md  VSTjs_showcase
VST3_Project_Generator/: README.md
VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/: CodeResources  Info.plist
VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/_CodeSignature/: CodeResources
my_plugins/: CMakeLists.txt
my_plugins/helloworld/: CMakeLists.txt
my_plugins/helloworld/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
my_plugins/helloworld/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
my_plugins/helloworld_with_VSTGUI/: CMakeLists.txt
my_plugins/helloworld_with_VSTGUI/include/: plugids.h  version.h
my_plugins/vstjs_plugin/: CMakeLists.txt
my_plugins/vstjs_plugin/include/: .plugprocessor.h.swp  plugcontroller.h  plugids.h  plugprocessor.h  version.h
my_plugins/vstjs_plugin/resource/: Info.plist
my_plugins/vstjs_plugin/source/: .plugprocessor.cpp.swp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
vst3sdk/public.sdk/source/vst/testsuite/processing/: .silenceflags.cpp.swp  silenceflags.cpp
vst3sdk/tools/: README.md
